// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swivel direct manipulation component installed behavior with callback should update its CSS transform correctly 1`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(0deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior with callback should update its CSS transform correctly 2`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(-10deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior with callback should update its CSS transform correctly 3`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(10deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior with callback should update its CSS transform correctly 4`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(10deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior with callback should update its swivel angle correctly 1`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(0deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior without callback should update its CSS transform correctly 1`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(0deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior without callback should update its CSS transform correctly 2`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(-10deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior without callback should update its CSS transform correctly 3`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(10deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior without callback should update its CSS transform correctly 4`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(10deg)",
    }
  }
>
  Hello swivel
</div>
`;

exports[`Swivel direct manipulation component installed behavior without callback should update its swivel angle correctly 1`] = `
<div
  className="Swivel"
  onMouseDown={[Function]}
  style={
    Object {
      "transform": "perspective(500px) rotateY(0deg)",
    }
  }
>
  Hello swivel
</div>
`;
